@@ -45,6 +45,10 @@ The following files are licensed under the following term:
         Copyright (c) 2008-2009 Dustin Sallings <dustin@spy.net>
         Copyright (c) 2009 Diogo Ferreira <diogo@underdev.org>
 
+    The twittytwister/tjson.py:
+
+        Copyright (c) 2012 Alexander Duryagin <aduryagin@gmail.com>
+
     The html/scrollsmoothly.js:
 
         Copyright (c) 2008-2009 KAZUMiX
